--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -77,3 +77,4 @@ en:
       signup_now: "Sign up now!"
       email: "Email"
       password: "Password"
+      remember_me: "Remember me on this computer"
