--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,5 +1,6 @@
 en:
   base_title: "Ruby on Rails Tutorial Sample App"
+  invalid_user: "No user found!"
   layouts:
     header:
       english: "English"
@@ -47,7 +48,6 @@ en:
       intro1: "Contact the Ruby on Rails Tutorial about the sample app at the"
       intro2: "contact page"
   users:
-    invalid_user: "No user found!"
     not_login: "Please log in."
     index:
       all: "All users"
@@ -97,10 +97,27 @@ en:
       email: "Email"
       password: "Password"
       remember_me: "Remember me on this computer"
+      forgot: "(forgot password)"
   account_activations:
     edit:
       activated: "Account activated!"
       invalid_activation: "Invalid activation link"
+  password_resets:
+    invalid_user: "Invalid user!"
+    create:
+      email_pass_reset_instructions: "Email sent with password reset instructions"
+      email_not_found: "Email address not found"
+    update:
+      empty_pass: "can't be empty"
+      updated: "Password has been reset."
+      update_failed: "Update password failed."
+    edit:
+      password_reset_expired: "Password reset has expired."
+      reset_password: "Reset password"
+      update_btn: "Update password"
+    new:
+      forgot_password: "Forgot password"
+      submit_btn: "Submit"
   user_mailer:
     account_activation:
       sample_app: "Sample App"
@@ -108,3 +125,9 @@ en:
       subject: "Account activation"
       intro: "Welcome to the Sample App! Click on the link below to activate your account:"
       activate: "Activate"
+    password_reset:
+      subject: "Password reset"
+      intro1: "To reset your password click the link below:"
+      intro2: "This link will expire in two hours."
+      intro3: "If you did not request your password to be reset, please ignore this email and
+                your password will stay as it is."
